--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 @import 'material-shadow.scss';
 
-$filterHeaderHeight: 24px;
+$filter-header-height: 24px;
 
 .category-wrapper {
     display: inline-block;
@@ -19,18 +19,18 @@ $filterHeaderHeight: 24px;
 }
 
 .accordion-wrapper {
+    
+    @include material-shadow(3);
+
     position: absolute;
     z-index: 100;
     width: auto;
-    top: 0px;
+    top: 0;
     left: 10px;
     right: 10px;
 
-    //box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
-    @include material-shadow(3);
-
     .panel-group {
-        margin-bottom: 0px;
+        margin-bottom: 0;
     }
 
     .panel {
@@ -43,8 +43,8 @@ $filterHeaderHeight: 24px;
     }
     .panel-heading {
         background: #757575 !important;
-        height: $filterHeaderHeight !important;
-        padding: 0px !important;
+        height: $filter-header-height !important;
+        padding: 0 !important;
         border-radius: 0 !important;
         z-index: 99;
     }
@@ -53,7 +53,7 @@ $filterHeaderHeight: 24px;
             bottom: 0;
             left: 0;
             right: 0;
-            border-radius: 0px 0px 2px 2px;
+            border-radius: 0 0 2px 2px;
         }
     .panel-title {
         color: #fff !important;
@@ -68,7 +68,7 @@ $filterHeaderHeight: 24px;
     .panel-body {
         max-height: 40vh;
         overflow-y: scroll;
-        padding: 15px 15px (15px + $filterHeaderHeight) 15px;
+        padding: 15px 15px (15px + $filter-header-height) 15px;
     }
     
 }
