--- a/styles/filter.css
+++ b/styles/filter.css
@@ -14,17 +14,17 @@
 }
 
 .accordion-wrapper {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   position: absolute;
   z-index: 100;
   width: auto;
-  top: 0px;
+  top: 0;
   left: 10px;
   right: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .accordion-wrapper .panel-group {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .accordion-wrapper .panel {
@@ -39,7 +39,7 @@
 .accordion-wrapper .panel-heading {
   background: #757575 !important;
   height: 24px !important;
-  padding: 0px !important;
+  padding: 0 !important;
   border-radius: 0 !important;
   z-index: 99;
 }
@@ -49,7 +49,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  border-radius: 0px 0px 2px 2px;
+  border-radius: 0 0 2px 2px;
 }
 
 .accordion-wrapper .panel-title {
