--- a/styles/stream.css
+++ b/styles/stream.css
@@ -1,11 +1,11 @@
 .stream {
   width: 100%;
   position: absolute;
-  bottom: 0px;
-  right: 0px;
-  left: 0px;
+  bottom: 0;
+  right: 0;
+  left: 0;
   top: 12px;
-  margin-top: 0px;
+  margin-top: 0;
   padding: 0 8px 100px 10px;
   height: auto;
   max-height: inherit;
@@ -23,7 +23,6 @@
   top: 0px;
 }
 
-/*Buttons at bottom of a stream*/
 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
@@ -37,6 +36,7 @@
 }
 
 .stream-action {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   width: 100%;
   position: absolute;
   height: 72px;
@@ -45,7 +45,6 @@
   right: 10px;
   border: none;
   border-radius: 2px 2px 0 0;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   background-color: #009688;
 }
 
@@ -80,13 +79,12 @@
   height: 100%;
 }
 
-/*Feed*/
 .fluid-container {
   width: auto;
   position: absolute;
   top: 82px;
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   right: -20px;
   padding: 0;
   max-height: inherit;
@@ -95,17 +93,17 @@
   display: inline-block;
 }
 
-/*Book*/
 .book {
   width: auto;
   top: 90px;
-  bottom: 0px;
+  bottom: 0;
   left: -15px;
-  right: 0px;
+  right: 0;
   float: right;
 }
 
 #book-action-wrapper {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   position: absolute;
   top: 10px;
   left: -5px;
@@ -114,7 +112,6 @@
   height: 80px;
   display: inline-block;
   border-radius: 2px 2px 0 0;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   z-index: 100;
 }
 
@@ -180,7 +177,7 @@
   position: relative;
   top: 56px;
   height: 24px;
-  padding: 0px !important;
+  padding: 0 !important;
   border-radius: 0 !important;
   z-index: 99;
   text-align: center;
