--- a/sass/media.scss
+++ b/sass/media.scss
@@ -48,7 +48,7 @@
     .nya-bs-select {
         text-align: center;
         .dropdown-toggle {
-            padding-right: 0px;
+            padding-right: 0;
         }
         .special-title, .filter-option {
             display: none;
