--- a/sass/material-shadow.scss
+++ b/sass/material-shadow.scss
@@ -1,15 +1,35 @@
 @mixin material-shadow ($elevation) {
     @if $elevation == 1 {
-        box-shadow: 0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+        -moz-box-shadow:        0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+        -ms-box-shadow:         0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+        -webkit-box-shadow:     0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
+        box-shadow:             0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
     } @else if $elevation == 2 {
-        box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
+        -moz-box-shadow:        0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
+        -ms-box-shadow:         0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
+        -webkit-box-shadow:     0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
+        box-shadow:             0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
     } @else if $elevation == 3 {
-        box-shadow: 0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
+        -moz-box-shadow:        0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
+        -ms-box-shadow:         0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
+        -webkit-box-shadow:     0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
+        box-shadow:             0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
     } @else if $elevation == 4 {
-        box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
+        -moz-box-shadow:        0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
+        -ms-box-shadow:         0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
+        -webkit-box-shadow:     0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
+        box-shadow:             0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
     } @else if $elevation == 5 {
-        box-shadow: 0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
+        -moz-box-shadow:        0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
+        -ms-box-shadow:         0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
+        -webkit-box-shadow:     0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
+        box-shadow:             0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
     } @else {
+        -moz-box-shadow: none;
+        -ms-box-shadow: none;
+        -webkit-box-shadow: none;
         box-shadow: none;
     }
+
+    transition: box-shadow .25s ease-in-out;
 }
