--- a/styles/card.css
+++ b/styles/card.css
@@ -1,5 +1,9 @@
 .card {
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: box-shadow .25s ease-in-out;
   min-height: 7.564em;
   max-height: 7.564em;
   height: 7.564em;
@@ -12,7 +16,6 @@
   background: #fff;
   display: block;
   transition: all .25s ease-in-out !important;
-  transition: box-shadow .25s ease-in-out;
   transition: margin .25s ease-in-out;
 }
 
@@ -30,9 +33,12 @@
 }
 
 .card:hover {
+  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  background: #f2f2f2;
   transition: box-shadow .25s ease-in-out;
+  background: #f2f2f2;
   z-index: 98;
   cursor: pointer;
 }
@@ -125,9 +131,12 @@
 }
 
 .card.active {
+  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  background: #d9d9d9;
   transition: box-shadow .25s ease-in-out;
+  background: #d9d9d9;
   transition: margin .25s ease-in-out;
   margin: 10px -5px 10px -5px;
   width: auto;
