--- a/sass/material-card.scss
+++ b/sass/material-card.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-body {
+body.material {
     position: fixed;
     left: 0;
     right: 0;
@@ -26,7 +26,7 @@ body {
 $tb-padding: 24px;
 $lr-padding: 24px;
 
-.card {	
+.material.card {	
     
     @include material-shadow(1);
 
@@ -39,22 +39,22 @@ $lr-padding: 24px;
     background: $color-card-background;
 }
 
-.card .primary-title {
+.material.card .primary-title {
     font-size: 24px;
     padding-bottom: 16px;
 }
 
-.card .supporting-text {
+.material.card .supporting-text {
     font-size: 14px;
     padding-bottom: 16px;
 }
 
-.card .action-area {
+.material.card .action-area {
     height: 52px;
     margin: 0 (-$lr-padding) (-$tb-padding) (-$lr-padding);
 }
 
-.card .card-action {
+.material.card .card-action {
     height: 36px;
     margin: 8px;
     font-size: 14px;
@@ -66,30 +66,30 @@ $lr-padding: 24px;
     font-weight: 500;
     text-decoration: none;
 }
-.card .card-action:hover {
+.material.card .card-action:hover {
     cursor: pointer;
 }
 
-.card .default {
+.material.card .default {
     color: $color-font;
 }
 
-.card .default:hover {
+.material.card .default:hover {
     background: rgba($color-font, .12);
 }
 
-.card .primary {
+.material.card .primary {
     color: $color-primary;
 }
 
-.card .primary:hover {
+.material.card .primary:hover {
     background: rgba($color-primary, .12);
 }
 
 
 // Extra Small Devices, Phones 
 @media only screen and (min-width : 480px) {
-    .card {
+    .material.card {
         width: 80vw;
         margin-left: 10vw;
     }
@@ -97,7 +97,7 @@ $lr-padding: 24px;
 
 // Small Devices, Tablets
 @media only screen and (min-width : 768px) {
-    .card {	
+    .material.card {	
         width: 60vw;
         margin-left: 20vw;
     }
@@ -105,7 +105,7 @@ $lr-padding: 24px;
 
 // Medium Devices, Desktops
 @media only screen and (min-width : 992px) {
-    .card {	
+    .material.card {	
         width: 50vw;
         margin-left: 25vw;
     }
@@ -113,7 +113,7 @@ $lr-padding: 24px;
 
 // Large Devices, Wide Screens
 @media only screen and (min-width : 1200px) {
-    .card {	
+    .material.card {	
         width: 30vw;
         margin-left: 35vw;
     }
@@ -121,8 +121,9 @@ $lr-padding: 24px;
 
 // Wide Screens, HD
 @media only screen and (min-width : 1600px) {
-    .card {	
+    .material.card {	
         width: 20vw;
         margin-left: 40vw;
     }
 }
+
