Added gulp functionality to bundle css

--- a/styles/book-selector.css
+++ b/styles/book-selector.css
@@ -1,5 +1,3 @@
-/*Light*/
-/*Dark*/
 #right .btn.btn-default.dropdown-toggle {
   background-color: #009688;
   color: #fff;
@@ -12,7 +10,11 @@
 }
 
 #right .dropdown-menu.open {
+  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: box-shadow .25s ease-in-out;
   position: relative;
   top: -20px;
   left: 28%;
