--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -372,7 +372,7 @@
             <fe-fluid 	id="article-stream"
                         class="stream">
                 <div id="infinite-scroll" infinite-scroll="buildMoreCards()" infinite-scroll-parent="true" infinite-scroll-distance=".75">                         
-                <card	class="card"
+                <card	class="stream card"
                         id="{{'e' + article.id}}"
                         scroll-center-on="article.active"
                         ng-repeat="article in articles track by article.id"
