--- a/sass/card.scss
+++ b/sass/card.scss
@@ -21,7 +21,7 @@ $height:    $header-height +
 
 
 
-.card {
+.stream.card {
 
     @include material-shadow(1);
     
@@ -48,7 +48,7 @@ $height:    $header-height +
         height: $header-height;
     }
 
-        .card .subject {
+        .stream.card .subject {
             color: $color-grey;
             position: absolute;
             left: 0;
@@ -57,7 +57,7 @@ $height:    $header-height +
             font-size: .75em;
         }
 
-    .card:hover {
+    .stream.card:hover {
         @include material-shadow(2);
         background: darken($color-card-background, 5%);
 
@@ -65,11 +65,11 @@ $height:    $header-height +
         cursor: pointer;
     }			
 
-        .card:hover .card-btn {
+        .stream.card:hover .card-btn {
             visibility: visible;
         }
 
-    .card .title{					
+    .stream.card .title{					
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -78,7 +78,7 @@ $height:    $header-height +
         line-height: 1.5em;
     }
 
-    .card .text{
+    .stream.card .text{
         overflow: hidden;
         white-space: normal;
 
@@ -89,7 +89,7 @@ $height:    $header-height +
         line-height: $text-line-height;
     }
     
-    .card .tag {
+    .stream.card .tag {
         font-size: .75em;
         line-height: $tag-line-height;
         font-style: italic;
@@ -100,7 +100,7 @@ $height:    $header-height +
         border: none;
     }
         
-        .card #tag-wrapper {
+        .stream.card #tag-wrapper {
             width: 70%;
             margin: $card-spacing 0 0 0;
             height: $tag-line-height  + .5 em;
@@ -109,7 +109,7 @@ $height:    $header-height +
             float: left;
         }
 
-        .card #tag-wrapper-action {
+        .stream.card #tag-wrapper-action {
             width: 33%;
             float: left;
             text-align: left;
@@ -118,7 +118,7 @@ $height:    $header-height +
             background: inherit;
         }
 
-            .card #tag-wrapper-action .action {
+            .stream.card #tag-wrapper-action .action {
                 background: none;
                 border: none;
                 float: left;
@@ -127,11 +127,11 @@ $height:    $header-height +
                 color: $color-primary;
             }    
             
-        .card #icon {
+        .stream.card #icon {
             float: left;
         }
 
-    .card #date {
+    .stream.card #date {
         width: 30%;
         margin: $card-spacing 0 0 0;
         height: $tag-line-height + .5 em;
@@ -140,7 +140,7 @@ $height:    $header-height +
         float: right;
     }
         
-    .card .card-btn{
+    .stream.card .card-btn{
         visibility: hidden;
         position: absolute;
         top: 10px;
@@ -151,7 +151,7 @@ $height:    $header-height +
         filter: alpha(opacity=40); // For IE8 and earlier */
     }
 
-        .card .card-btn:hover{
+        .stream.card .card-btn:hover{
             opacity: 1;
             filter: alpha(opacity=100); // For IE8 and earlier */
             transition: opacity .2s ease-in-out;
