--- a/styles/card.css
+++ b/styles/card.css
@@ -1,4 +1,4 @@
-.card {
+.stream.card {
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -23,7 +23,7 @@
   height: 1.25em;
 }
 
-.card .subject {
+.stream.card .subject {
   color: #bdbdbd;
   position: absolute;
   left: 0;
@@ -32,7 +32,7 @@
   font-size: .75em;
 }
 
-.card:hover {
+.stream.card:hover {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -43,11 +43,11 @@
   cursor: pointer;
 }
 
-.card:hover .card-btn {
+.stream.card:hover .card-btn {
   visibility: visible;
 }
 
-.card .title {
+.stream.card .title {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -55,7 +55,7 @@
   line-height: 1.5em;
 }
 
-.card .text {
+.stream.card .text {
   overflow: hidden;
   white-space: normal;
   min-height: 2em;
@@ -64,7 +64,7 @@
   line-height: 1em;
 }
 
-.card .tag {
+.stream.card .tag {
   font-size: .75em;
   line-height: 0.938em;
   font-style: italic;
@@ -74,7 +74,7 @@
   border: none;
 }
 
-.card #tag-wrapper {
+.stream.card #tag-wrapper {
   width: 70%;
   margin: 0.313em 0 0 0;
   height: 1.438em em;
@@ -83,7 +83,7 @@
   float: left;
 }
 
-.card #tag-wrapper-action {
+.stream.card #tag-wrapper-action {
   width: 33%;
   float: left;
   text-align: left;
@@ -92,7 +92,7 @@
   background: inherit;
 }
 
-.card #tag-wrapper-action .action {
+.stream.card #tag-wrapper-action .action {
   background: none;
   border: none;
   float: left;
@@ -101,11 +101,11 @@
   color: #009688;
 }
 
-.card #icon {
+.stream.card #icon {
   float: left;
 }
 
-.card #date {
+.stream.card #date {
   width: 30%;
   margin: 0.313em 0 0 0;
   height: 1.438em em;
@@ -114,7 +114,7 @@
   float: right;
 }
 
-.card .card-btn {
+.stream.card .card-btn {
   visibility: hidden;
   position: absolute;
   top: 10px;
@@ -124,7 +124,7 @@
   filter: alpha(opacity=40);
 }
 
-.card .card-btn:hover {
+.stream.card .card-btn:hover {
   opacity: 1;
   filter: alpha(opacity=100);
   transition: opacity .2s ease-in-out;
