--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -9,7 +9,7 @@ $t-margin: 10px;
     bottom: 0;
     right: 0;
     left: 0;
-    top: 12px;
+    //top: 12px;
     margin-top: 0;
     padding: 0 8px 100px 10px;
     height: auto;
