--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -418,7 +418,7 @@
                 </div>
             </div>
             <div id="article-book" class="stream book">
-                <card	class="card"
+                <card	class="stream card"
                                 ng-repeat="article in articles track by article.id"
                                 ng-if="article.inBook"
                                 ng-class="{	'card-extended-hover': hovering,
