--- a/templates/create-account.html
+++ b/templates/create-account.html
@@ -1,7 +1,36 @@
-<div class="material card">
+<div class="material card" ng-controller="CreateAccountCtrl">
     <div class="primary-title">Welcome</div>
 
-    <div class="supporting-text">It looks like you haven't been here before.</div>
+    <div class="supporting-text">It looks like you haven't been here before. Let's get some info to get started.</div>
+
+    <div class="material-form form-group">
+        <div class="row">
+            <div class="text-field">
+                <input type="text" class="form-control" id="first" ng-model="first">
+                <label for="first" ng-class="{'with-text': first.length > 0}">First Name</label>
+            </div>
+        </div>
+        <div class="row">
+                <div class="text-field">
+                    <input type="text" class="form-control" id="last" ng-model="last">
+                    <label for="last" ng-class="{'with-text': last.length > 0}">Last Name</label>
+                </div>
+            </div>
+        <div class="row">
+            <div class="text-field">
+                <div class="btn-group col-xs-12" uib-dropdown keyboard-nav>
+                    <button id="team-dropdown" type="button" class="btn btn-primary" uib-dropdown-toggle ng-model="dropdownLabel" ng-class="{'item-selected': itemSelected}">
+                        {{dropdownLabel}}
+                        <span class="caret"></span>
+                    </button>
+                    <ul uib-dropdown-menu role="menu" aria-labelledby="team-dropdown">
+                        <li ng-repeat="team in teams" ng-click="teamSelected(team)" role="menuitem"><a href="">{{team.name}}</a></li>
+                    </ul>
+                </div>
+                <label for="team-dropdown" class="with-text" ng-class="{'hide': !itemSelected, 'fade-in': itemSelected}">Team</label>
+        </div> 
+    </div>
+
     <div class="action-area">
         <a href="/" class="card-action primary">
             CREATE ACCOUNT
