--- a/sass/material-form.scss
+++ b/sass/material-form.scss
@@ -115,6 +115,7 @@ $label-margin-bottom: 12px;
 
     input:active,
     input:focus {
+        padding: 0 0 ($input-padding-bottom - 1) 0;
         border-bottom: 	2px solid $color-primary;
     }
 }
